ETC-140: CF - Set overflow on body, html to prevent overflow issues from Whova embed

--- a/docroot/themes/custom/crosscut_festival/css/style.css
+++ b/docroot/themes/custom/crosscut_festival/css/style.css
@@ -13225,6 +13225,7 @@ fieldset legend span {
 /** General **/
 html,
 body {
+  overflow: initial !important;
   margin: 0;
   padding: 0;
   height: 100%;
