--- a/docroot/themes/custom/crosscut_festival/scss/site/general/_general.scss
+++ b/docroot/themes/custom/crosscut_festival/scss/site/general/_general.scss
@@ -9,7 +9,7 @@
 
 html,
 body {
-  //overflow-x: hidden;
+  overflow: initial !important;
   margin: 0;
   padding: 0;
   height: 100%;
